force-app/main/default/objects/Meal_Suggestion__c/Meal_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Meal Suggestion</label>
    <nameField>
        <displayFormat>MS-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meal Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>