force-app/main/default/objects/Meal_Suggestion__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>