force-app/main/default/objects/Meal_Suggestion__c/fields/Suggested__c.field-meta.xml
<CustomField>
    <fullName>Suggested__c</fullName>
    <label>Suggested</label>
    <length>20</length>
    <type>Text</type>
</CustomField>